tests/rosetta/out/Haskell/apply-a-callback-to-an-array-1.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/apply-a-callback-to-an-array-1.hs:42:18: error:
    Not in scope: ‘Map.lookup’
    NB: no module named ‘Map’ is imported.
   |
42 |          in case Map.lookup k m of
   |                  ^^^^^^^^^^

/workspace/mochi/tests/rosetta/out/Haskell/apply-a-callback-to-an-array-1.hs:43:33: error:
    Not in scope: ‘Map.insert’
    NB: no module named ‘Map’ is imported.
   |
43 |               Just is -> go xs (Map.insert k (is ++ [x]) m) order
   |                                 ^^^^^^^^^^

/workspace/mochi/tests/rosetta/out/Haskell/apply-a-callback-to-an-array-1.hs:44:33: error:
    Not in scope: ‘Map.insert’
    NB: no module named ‘Map’ is imported.
   |
44 |               Nothing -> go xs (Map.insert k [x] m) (order ++ [k])
   |                                 ^^^^^^^^^^

/workspace/mochi/tests/rosetta/out/Haskell/apply-a-callback-to-an-array-1.hs:45:27: error:
    Not in scope: ‘Map.empty’
    NB: no module named ‘Map’ is imported.
   |
45 |       (m, order) = go src Map.empty []
   |                           ^^^^^^^^^

/workspace/mochi/tests/rosetta/out/Haskell/apply-a-callback-to-an-array-1.hs:46:32: error:
    Not in scope: ‘Map.lookup’
    NB: no module named ‘Map’ is imported.
   |
46 |    in [MGroup k (fromMaybe [] (Map.lookup k m)) | k <- order]
   |                                ^^^^^^^^^^

/workspace/mochi/tests/rosetta/out/Haskell/apply-a-callback-to-an-array-1.hs:82:41: error:
    Not in scope: type constructor or class ‘Map.Map’
    NB: no module named ‘Map’ is imported.
   |
82 | _parseCSV :: String -> Bool -> Char -> [Map.Map String String]
   |                                         ^^^^^^^

/workspace/mochi/tests/rosetta/out/Haskell/apply-a-callback-to-an-array-1.hs:95:21: error:
    Not in scope: ‘Map.fromList’
    NB: no module named ‘Map’ is imported.
   |
95 |                  in Map.fromList
   |                     ^^^^^^^^^^^^
